--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
 
 	    p { margin-bottom: 1em; }
 
-    </style> 
+    </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108075264-8"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-108075264-8');
+	</script>
   
   </head>
 
