ADD: some meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <head>
     
 	<meta charset="utf-8" />
+
+	<meta name="owner" content="FLEISCHMANN Gergő" />
+	<meta name="author" content="FLEISCHMANN Gergő" />
+
+	<meta name="description" content="A personal page for Fleischmann Gergő."/>
 	
 	<title>Fleischmann Gergő</title>
 	
