--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
-<!doctype html>
+<!doctype html public "-//W3C//DTD HTML 5.0//EN" "http://www.w3.org/TR/html5/strict.dtd">
 
-<html>
+<!-- 
+
+#                               __ _      _          _                                   _
+#                              / _| |    (_)        | |                                 | |
+#   __ _  ___ _ __ __ _  ___  | |_| | ___ _ ___  ___| |__  _ __ ___   __ _ _ __  _ __   | |__  _   _
+#  / _` |/ _ \ '__/ _` |/ _ \ |  _| |/ _ \ / __|/ __| '_ \| '_ ` _ \ / _` | '_ \| '_ \  | '_ \| | | |
+# | (_| |  __/ | | (_| | (_) || | | |  __/ \__ \ (__| | | | | | | | | (_| | | | | | | |_| | | | |_| |
+#  \__, |\___|_|  \__, |\___(_)_| |_|\___|_|___/\___|_| |_|_| |_| |_|\__,_|_| |_|_| |_(_)_| |_|\__,_|
+#   __/ |          __/ |
+#  |___/          |___/
+#
+# ---------------------------------------------------------------------------------------------------
+ 
+# 
+# Rls: 2018.01.01.  
+#
+
+-->
+
+<html lang="hu-HU">
 
   <head>
     
